fix: gap between profile and places and footer

--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,3 +3,9 @@
   min-width: 320px;
   margin-bottom: 66px;
 }
+
+@media screen and (max-width: 520px) {
+  .places {
+    margin-bottom: 48px;
+  }
+}
